src/test/ui/regions/regions-early-bound-error.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-early-bound-error.rs:29:5
   |
LL |     g1.get()
   |     ^^^^^^^^

error: unsatisfied lifetime constraints
  --> $DIR/regions-early-bound-error.rs:29:5
   |
LL | fn get<'a,'b,G:GetRef<'a, isize>>(g1: G, b: &'b isize) -> &'b isize {
   |        -- -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
LL |     g1.get()
   |     ^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`

error: aborting due to previous error

